# athlete-number

./: .bumpversion.cfg  .dockerignore  .env  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: pylint.yaml  test.yaml
athlete_number/: main.py
athlete_number/core/: configs.py  schemas.py
athlete_number/routers/: detect_bib_number.py  detect_digits.py  extract_athlete_number.py  extract_bib_number.py  extract_bib_numbers.py  extract_digits.py  extract_number.py  extract_numbers.py  ocr.py
athlete_number/services/: detection.py  detection_orchestrator.py  model_loader.py  ocr.py  ocr_service.py  utils.py
athlete_number/utils/: exceptions.py  image_processor.py  logger.py
backend/: .env  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  pyproject.toml
backend/athlete_number/: gpu_config.py  main.py
backend/athlete_number/core/: configs.py  schemas.py
backend/athlete_number/routers/: detect_bib_numbers.py  extract_bib_numbers.py  extract_numbers.py
backend/athlete_number/services/: detection.py  detection_orchestrator.py  ocr.py  utils.py
backend/athlete_number/utils/: exceptions.py  logger.py
backend/scripts/: start.sh
backend/tests/: test_logger.py
batch_processor/: .env  Makefile  README.md  batch_pipeline.py  detect_bib_numbers.py  download_bib_numbers.py  requirements.txt  run_batch_processing.sh
batch_processor/aws/dynamodb/: create_dynamodb_table.sh  create_dynamodb_tables.sh  delete_dynamodb_tables.sh  reset.sh
batch_processor/aws/dynamodb/customers/: allsports.sh
batch_processor/aws/dynamodb/ddl/: allsports_bib_number_detection.ddl  customer_usage.ddl  customers.ddl  image_tracker.ddl  job_counter.ddl
batch_processor/aws/ec2/: launch_ec2.sh
batch_processor/aws/lambda/: .env  deploy_lambda.sh  lambda_function.py  query_tables.py  requirements.txt  test_lambda_local.py  update_lambda_function.sh  verify_lambda_deployment.sh
batch_processor/aws/lambda/check_detection_completion/: deploy_lambda.sh  lambda_function.py  requirements.txt
batch_processor/aws/lambda/check_detection_in_progress/: deploy_lambda.sh  lambda_function.py  service_account.json  test_lambda_local.py
batch_processor/aws/lambda/src/: config.py  dynamodb_utils.py  s3_utils.py
batch_processor/aws/postgresql/: connect.sh  migrate_example.sql
batch_processor/aws/postgresql/ddl/: allsports_bib_number_detection.ddl  athlete_number_detection_images.ddl  athlete_number_detection_ingestion_image.ddl  athlete_number_detection_processed_image.ddl  create_partitions.ddl
batch_processor/ingestion/: .env  process_s3_log_live.py  pyproject.toml  run_aws_s3_sync.sh  run_lambda_ingestion.sh  run_local_ingestion.sh
batch_processor/scripts/: run_aws_s3_sync.sh  run_lambda_ingestion.sh  s3_ingestion.sh
batch_processor/scripts/.aws/: credentials
batch_processor/scripts/.client_aws/: credentials
batch_processor/src/: aws_utils.py  config.py  configy.py  db_handler.py  ocr_handler.py  result_handler.py  s3_handler.py  sqlite_db_handler.py
frontend/: Dockerfile  README.md  demo.py  pyproject.toml  requirements.txt  s3_image_viewer.py
tests/: test_logger.py
