[project]
name = "athlete-number-frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "joseph"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.42.2,<2.0.0)",
    "boto3 (>=1.37.3,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pg8000 (>=1.31.2,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
